# aggro

./: Cargo.toml  README.md
.github/workflows/: rust.yml
example/: info.json
src/: cli.rs  main.rs  prop.rs  types.rs
