[package]
name = "aggro"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.28.0", features=["fs"] }

clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
reqwest = { version = "0.12.4", default-features = false, features = ["blocking", "json"] }
